# tolk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  appveyor.yml  build_all_on_amd64.bat  build_all_on_x86.bat  build_doc.bat  build_dotnet.bat  build_dotnet_on_amd64.bat  build_dotnet_on_x86.bat  build_jni.bat  build_python.bat  build_ruby.bat  build_tolk_on_amd64.bat  build_tolk_on_x86.bat  build_tolk_x64.bat  build_tolk_x86.bat  build_zip.bat  clean.bat  meson-install.bat  meson.build  meson_options.txt
.github/workflows/: cmake.yml  release.yml
contrib/java-iodine/: ConsoleApp.java  Tolk.java
contrib/lua/: Tolk.lua
contrib/oxygene/: ConsoleApp.pas  Tolk.pas
contrib/swift-silver/: ConsoleApp.swift  Tolk.swift
docs/: Makefile  README.md  meson.build
examples/Java-Iodine/: ConsoleApp.java
examples/Oxygene/: ConsoleApp.pas
examples/Swift-Silver/: ConsoleApp.swift
examples/autoit/: ConsoleApp.au3  build.bat
examples/c/: ConsoleApp.c  build.bat
examples/c#/: ConsoleApp.cs  build.bat
examples/c++/: ConsoleApp.cpp  Tolk.lib  build.bat
examples/java/: ConsoleApp.java  build.bat
examples/purebasic/: ConsoleApp.pb  build.bat
examples/python/: ConsoleApp.py  build.bat
examples/ruby/: ConsoleApp.rb
examples/vb.net/: ConsoleApp.vb  build.bat
scripts/: ZTFix32.reg  ZTFix64.reg
src/: Makefile  README.md  ScreenReaderDriver.cpp  ScreenReaderDriver.h  ScreenReaderDriverJAWS.cpp  ScreenReaderDriverJAWS.h  ScreenReaderDriverNVDA.cpp  ScreenReaderDriverNVDA.h  ScreenReaderDriverSA.cpp  ScreenReaderDriverSA.h  ScreenReaderDriverSAPI.cpp  ScreenReaderDriverSAPI.h  ScreenReaderDriverSNova.cpp  ScreenReaderDriverSNova.h  ScreenReaderDriverWE.cpp  ScreenReaderDriverWE.h  ScreenReaderDriverZT.cpp  ScreenReaderDriverZT.h  Tolk.cpp  Tolk.h  Tolk.rc  TolkJNI.cpp  TolkVersion.h  fsapi.c  fsapi.h  meson.build  wineyes.c  wineyes.h  zt.c  zt.h
src/Oxygene/: tolk.pas
src/Swift-Silver/: tolk.swift
src/autoit/: Tolk.au3
src/dotnet/: Makefile  Tolk.cs  TolkDotNet.rc  meson.build
src/java/: Makefile  TolkJNI.cpp  TolkJNI.h  com_davykager_tolk_Tolk.cpp  meson.build
src/java-iodine/: tolk.java
src/java/com/davykager/tolk/: Tolk.java
src/purebasic/: Tolk.pb
src/python/: Tolk.py  meson.build
src/reaper/: ScreenREAPER.cpp  reaper_plugin.h
src/ruby/: extconf.rb  tolk.cpp
